// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag component > passes extra props to AntTag 1`] = `
<div>
  <span
    class="ant-tag css-dev-only-do-not-override-mncuj7"
    data-testid="tag-testid"
    id="custom-id"
  >
    Content
  </span>
</div>
`;

exports[`Tag component > renders with children and additional props 1`] = `
<div>
  <span
    class="ant-tag ant-tag-blue css-dev-only-do-not-override-mncuj7"
  >
    Test Tag
  </span>
</div>
`;
